logs/simoorg.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/argparse-1.4.0.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/flake8'...
Listing './lib/python3.5/site-packages/flake8/api'...
Listing './lib/python3.5/site-packages/flake8/formatting'...
Listing './lib/python3.5/site-packages/flake8/main'...
Listing './lib/python3.5/site-packages/flake8/options'...
Listing './lib/python3.5/site-packages/flake8/plugins'...
Listing './lib/python3.5/site-packages/flake8-3.5.0.dist-info'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/gunicorn'...
Listing './lib/python3.5/site-packages/gunicorn/app'...
Listing './lib/python3.5/site-packages/gunicorn/http'...
Listing './lib/python3.5/site-packages/gunicorn/instrument'...
Listing './lib/python3.5/site-packages/gunicorn/workers'...
Listing './lib/python3.5/site-packages/gunicorn-19.7.1.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/kazoo'...
Listing './lib/python3.5/site-packages/kazoo/handlers'...
Listing './lib/python3.5/site-packages/kazoo/protocol'...
Listing './lib/python3.5/site-packages/kazoo/recipe'...
Listing './lib/python3.5/site-packages/kazoo/testing'...
Listing './lib/python3.5/site-packages/kazoo/tests'...
Listing './lib/python3.5/site-packages/kazoo-2.4.0.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/mccabe-0.6.1.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycodestyle-2.3.1.dist-info'...
Listing './lib/python3.5/site-packages/pyflakes'...
Listing './lib/python3.5/site-packages/pyflakes/scripts'...
Listing './lib/python3.5/site-packages/pyflakes/test'...
Listing './lib/python3.5/site-packages/pyflakes-1.6.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/simoorg'...
Listing './lib/python3.5/site-packages/simoorg/Api'...
Compiling './lib/python3.5/site-packages/simoorg/Api/MoiraiApiServer.py'...
***   File "./lib/python3.5/site-packages/simoorg/Api/MoiraiApiServer.py", line 65
    print "Unable to connect to Moirai Server"
                                             ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/simoorg/Logger.py'...
***   File "./lib/python3.5/site-packages/simoorg/Logger.py", line 153
    print "[FATAL]: Logger configuration is not defined"
                                                       ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/simoorg/__main__.py'...
***   File "./lib/python3.5/site-packages/simoorg/__main__.py", line 22
    print "Please provide config path"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/simoorg/atropos.py'...
***   File "./lib/python3.5/site-packages/simoorg/atropos.py", line 242
    print '[VERBOSE INFO]:', self.service, 'main_loop completed'
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/simoorg/moirai.py'...
***   File "./lib/python3.5/site-packages/simoorg/moirai.py", line 68
    print "Missing API config file, exiting"
                                           ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/simoorg/plugins'...
Listing './lib/python3.5/site-packages/simoorg/plugins/common'...
Listing './lib/python3.5/site-packages/simoorg/plugins/handler'...
Listing './lib/python3.5/site-packages/simoorg/plugins/handler/ShellScriptHandler'...
Compiling './lib/python3.5/site-packages/simoorg/plugins/handler/ShellScriptHandler/ShellScriptHandler.py'...
***   File "./lib/python3.5/site-packages/simoorg/plugins/handler/ShellScriptHandler/ShellScriptHandler.py", line 139
    print "[FATAL]: Server's host key could not be retrieved"
                                                            ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/simoorg/plugins/handler/TestHandler'...
Listing './lib/python3.5/site-packages/simoorg/plugins/healthcheck'...
Listing './lib/python3.5/site-packages/simoorg/plugins/healthcheck/DefaultHealthCheck'...
Listing './lib/python3.5/site-packages/simoorg/plugins/healthcheck/KafkaHealthCheck'...
Listing './lib/python3.5/site-packages/simoorg/plugins/scheduler'...
Listing './lib/python3.5/site-packages/simoorg/plugins/scheduler/NonDeterministicScheduler'...
Compiling './lib/python3.5/site-packages/simoorg/plugins/scheduler/NonDeterministicScheduler/NonDeterministicScheduler.py'...
***   File "./lib/python3.5/site-packages/simoorg/plugins/scheduler/NonDeterministicScheduler/NonDeterministicScheduler.py", line 92
    print '[VERBOSE INFO]: NonDeterministic plan has been generated'
                                                                   ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/simoorg/plugins/scheduler/TestScheduler'...
Listing './lib/python3.5/site-packages/simoorg/plugins/topology'...
Listing './lib/python3.5/site-packages/simoorg/plugins/topology/KafkaTopology'...
Listing './lib/python3.5/site-packages/simoorg/plugins/topology/StaticTopology'...
Listing './lib/python3.5/site-packages/simoorg/plugins/topology/TestTopology'...
Listing './lib/python3.5/site-packages/simoorg-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
